k8s-deploy/micro/hzero-admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-admin
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: hzero-admin
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-admin:v1.4.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8060
          name: admin
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
