k8s-deploy/micro/hzero-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-config
  labels:
    app: config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
      - name: hzero-config
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-config:v1.4.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8010
          name: config
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
