k8s-deploy/micro/hzero-file.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-file
  labels:
    app: file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file
  template:
    metadata:
      labels:
        app: file
    spec:
      containers:
      - name: hzero-file
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-file:v1.4.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8110
          name: file
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
