k8s-deploy/micro/hzero-iam.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-iam
  labels:
    app: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam
  template:
    metadata:
      labels:
        app: iam
    spec:
      containers:
      - name: hzero-iam
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-iam:v1.4.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8030
          name: iam
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
