k8s-deploy/micro/hzero-import.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-import
  labels:
    app: import
spec:
  replicas: 1
  selector:
    matchLabels:
      app: import
  template:
    metadata:
      labels:
        app: import
    spec:
      containers:
      - name: hzero-import
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-import:v1.4.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8140
          name: import
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
