k8s-deploy/micro/hzero-message.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-message
  labels:
    app: message
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
      - name: hzero-message
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-message:v1.4.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8120
          name: message
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
