k8s-deploy/micro/hzero-oauth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-oauth
  labels:
    app: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
      - name: hzero-oauth
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-oauth:v1.4.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8020
          name: oauth
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
