k8s-deploy/micro/hzero-platform.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-platform
  labels:
    app: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      labels:
        app: platform
    spec:
      containers:
      - name: hzero-platform
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-platform:v1.4.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8100
          name: platform
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
