k8s-deploy/micro/hzero-report.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-report
  labels:
    app: report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report
  template:
    metadata:
      labels:
        app: report
    spec:
      containers:
      - name: hzero-report
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-report:v1.4.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8210
          name: report
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
