k8s-deploy/micro/hzero-scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-scheduler
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
      - name: hzero-scheduler
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-scheduler:v1.4.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8130
          name: scheduler
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
