k8s-deploy/micro/hzero-swagger.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-swagger
  labels:
    app: swagger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger
  template:
    metadata:
      labels:
        app: swagger
    spec:
      containers:
      - name: hzero-swagger
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-swagger:v1.4.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8050
          name: swagger
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
