k8s-deploy/micro/hzero-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hzero-front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
  - port: 8848
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: hzero-front
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-front:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: front
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hzero-front
spec:
  rules:
  - host: front.7otech.com
    http:
      paths:
      - backend:
          serviceName: hzero-front
          servicePort: 8848
