k8s-deploy/micro/hzero-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hzero-gateway
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
  - name: gateway
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: gateway
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hzero-gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: hzero-gateway
        image: registry.cn-hangzhou.aliyuncs.com/openhand/hzero-gateway:v1.4.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: gateway
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
      imagePullSecrets:
        - name: registry-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hzero-gateway
spec:
  rules:
  - host: gateway.hzero.org
    http:
      paths:
      - backend:
          serviceName: hzero-gateway
          servicePort: 8080
